k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubequest
  labels:
    app: kubequest
